--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.app-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4faff;
+  min-height: 100vh;
+}
+
+.cards-list-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .cards-list-container {
+    margin-top: 96px;
+  }
+
+}
+
+.heading {
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 48px;
+  color: #171f46;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.description {
+  font-family: "Roboto";
+  font-size: 18px;
+  color: #64748b;
+  text-align: center;
+  margin-top: 24px;
+  max-width: 625px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cards-list {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1100px;
+  margin-top: 32px;
+  padding-left: 0px;
 }
 
-.App-link {
-  color: #61dafb;
+.card-1 {
+  border-top: 5px solid #ff4f64;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-2 {
+  border-top: 5px solid #00a8e7;
+}
+
+.card-3 {
+  border-top: 5px solid #44c4a1;
+}
+
+.card-4 {
+  border-top: 5px solid #fcc200;
 }
