--- a/src/components/CardItem/index.css
+++ b/src/components/CardItem/index.css
@@ -11,3 +11,19 @@
     margin-bottom: 48px;
     list-style-type: none;
 }
+
+.card-description {
+  color: #64748b;
+  font-family: 'Roboto';
+  font-size: 14px;
+}
+
+.img-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.card-img {
+  width: 80px;
+  height: 80px;
+}
